[package]
name = "yoda"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glium = "0.30.2"
nalgebra = "0.29.0"
num-traits = "0.2.14"
notflat = {path = "../notflat"}
lyon = "0.17.5"

[dev-dependencies]
shapefile = "0.3.0"

