[package]
name = "yoda"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.29.0"
num-traits = "0.2.14"
lyon = "0.17.5"
glow = "0.11.0"
instant = "0.1.11"
sorted-vec = "0.5.2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
glutin = "0.27.0"
winit = "0.25.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
winit = { version = "0.25.0", features = ["web-sys"] }
web-sys = { version = "0.3.55", features = [
    "Window",
    "HtmlCanvasElement",
    "WebGl2RenderingContext",
]}
wasm-bindgen = "0.2.63"

[dev-dependencies]
glutin = "0.27.0"
shapefile = "0.3.0"

